--- a/src/VisualStudio/Core/Def/xlf/ServicesVSResources.ko.xlf
+++ b/src/VisualStudio/Core/Def/xlf/ServicesVSResources.ko.xlf
@@ -136,7 +136,7 @@
         <source>Entire Solution</source>
         <target state="new">Entire Solution</target>
         <note />
-      </trans-unit>orScheme dropdown to Advanced Options page
+      </trans-unit>
       <trans-unit id="Evaluating_0_tasks_in_queue">
         <source>Evaluating ({0} tasks in queue)</source>
         <target state="translated">평가 중(큐의 {0}개 작업)</target>
@@ -530,6 +530,11 @@
       <trans-unit id="Show_completion_list">
         <source>Show completion list</source>
         <target state="translated">완성 목록 표시</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="Some_color_scheme_colors_are_being_overridden_by_changes_made_in_the_Environment_Fonts_and_Colors_options_page_Choose_Use_Defaults_in_the_Fonts_and_Colors_page_to_revert_all_customizations">
+        <source>Some color scheme colors are being overridden by changes made in the Environment &gt; Fonts and Colors options page. Choose `Use Defaults` in the Fonts and Colors page to revert all customizations.</source>
+        <target state="new">Some color scheme colors are being overridden by changes made in the Environment &gt; Fonts and Colors options page. Choose `Use Defaults` in the Fonts and Colors page to revert all customizations.</target>
         <note />
       </trans-unit>
       <trans-unit id="Target_Namespace_colon">
