--- a/src/Workspaces/Core/Portable/xlf/WorkspacesResources.fr.xlf
+++ b/src/Workspaces/Core/Portable/xlf/WorkspacesResources.fr.xlf
@@ -97,6 +97,11 @@
         <target state="translated">Préférences de nouvelle ligne</target>
         <note />
       </trans-unit>
+      <trans-unit id="Options_did_not_come_from_Solution">
+        <source>Options did not come from Solution</source>
+        <target state="new">Options did not come from Solution</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Organize_usings">
         <source>Organize usings</source>
         <target state="translated">Organiser les instructions Using</target>
@@ -1860,11 +1865,6 @@ Les assertions arrière positives de largeur nulle sont généralement utilisée
       <trans-unit id="Add_braces_to_0_statement">
         <source>Add braces to '{0}' statement.</source>
         <target state="translated">Ajouter des accolades à l'instruction '{0}'.</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="Options_did_not_come_from_Workspace">
-        <source>Options did not come from Workspace</source>
-        <target state="translated">Les options ne proviennent pas de l'espace de travail</target>
         <note />
       </trans-unit>
       <trans-unit id="Enable">
