--- a/src/Workspaces/Core/Portable/xlf/WorkspacesResources.ru.xlf
+++ b/src/Workspaces/Core/Portable/xlf/WorkspacesResources.ru.xlf
@@ -97,6 +97,11 @@
         <target state="translated">Предпочтения для новых строк</target>
         <note />
       </trans-unit>
+      <trans-unit id="Options_did_not_come_from_Solution">
+        <source>Options did not come from Solution</source>
+        <target state="new">Options did not come from Solution</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Organize_usings">
         <source>Organize usings</source>
         <target state="translated">Упорядочение Using</target>
@@ -1860,11 +1865,6 @@ Zero-width positive lookbehind assertions are typically used at the beginning of
       <trans-unit id="Add_braces_to_0_statement">
         <source>Add braces to '{0}' statement.</source>
         <target state="translated">Добавить фигурные скобки в оператор "{0}".</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="Options_did_not_come_from_Workspace">
-        <source>Options did not come from Workspace</source>
-        <target state="translated">Параметры получены не из рабочей области</target>
         <note />
       </trans-unit>
       <trans-unit id="Enable">
