--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -1750,4 +1750,7 @@ This version used in: {2}</value>
   <data name="Make_member_static" xml:space="preserve">
     <value>Make static</value>
   </data>
+  <data name="Make_class_abstract" xml:space="preserve">
+    <value>Make class 'abstract'</value>
+  </data>
 </root>
