Initial work for C# 9 pattern-matching changes (#39913)
* Syntax model changes to support C# 9.0 pattern-matching changes.
* Parsing for new pattern forms.
* Bind the new pattern forms.
* Disambiguate pattern combinators per LDM to minimize any breaking change.
* Skip tests broken by language changes.
Related to #40015

--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5921,6 +5921,24 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="IDS_FeatureAsyncUsing" xml:space="preserve">
     <value>asynchronous using</value>
   </data>
+  <data name="IDS_FeatureParenthesizedPattern" xml:space="preserve">
+    <value>parenthesized pattern</value>
+  </data>
+  <data name="IDS_FeatureOrPattern" xml:space="preserve">
+    <value>or pattern</value>
+  </data>
+  <data name="IDS_FeatureAndPattern" xml:space="preserve">
+    <value>and pattern</value>
+  </data>
+  <data name="IDS_FeatureNotPattern" xml:space="preserve">
+    <value>not pattern</value>
+  </data>
+  <data name="IDS_FeatureTypePattern" xml:space="preserve">
+    <value>type pattern</value>
+  </data>
+  <data name="IDS_FeatureRelationalPattern" xml:space="preserve">
+    <value>relational pattern</value>
+  </data>
   <data name="ERR_VarianceInterfaceNesting" xml:space="preserve">
     <value>Enums, classes, and structures cannot be declared in an interface that has an 'in' or 'out' type parameter.</value>
   </data>
