--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5945,4 +5945,7 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="ERR_ExternEventInitializer" xml:space="preserve">
     <value>'{0}': extern event cannot have initializer</value>
   </data>
+  <data name="ERR_DesignatorBeneathPatternCombinator" xml:space="preserve">
+    <value>A variable may not be declared within a 'not' or 'or' pattern.</value>
+  </data>
 </root>
