--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.ja.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.ja.xlf
@@ -127,6 +127,11 @@
         <target state="translated">ファイル名の変更 (部分型では許可されません)(_F)</target>
         <note>Disabled text status for file rename</note>
       </trans-unit>
+      <trans-unit id="Split_comment">
+        <source>Split Comment</source>
+        <target state="new">Split Comment</target>
+        <note />
+      </trans-unit>
       <trans-unit id="String_Escape_Character">
         <source>String - Escape Character</source>
         <target state="translated">文字列 - エスケープ文字</target>
