--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.ko.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.ko.xlf
@@ -127,6 +127,11 @@
         <target state="translated">파일 이름 바꾸기(부분 형식에서 허용되지 않음)(_F)</target>
         <note>Disabled text status for file rename</note>
       </trans-unit>
+      <trans-unit id="Split_comment">
+        <source>Split Comment</source>
+        <target state="new">Split Comment</target>
+        <note />
+      </trans-unit>
       <trans-unit id="String_Escape_Character">
         <source>String - Escape Character</source>
         <target state="translated">문자열 - 이스케이프 문자</target>
