Add error for parameter list without 'data'

--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5930,4 +5930,7 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="IDS_FeatureRecords" xml:space="preserve">
     <value>records</value>
   </data>
+  <data name="ERR_BadRecordDeclaration" xml:space="preserve">
+    <value>Records must have both a 'data' modifier and parameter list</value>
+  </data>
 </root>
